--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ nav ul li a:hover {
 .hero {
     position: relative;
     height: 60vh;
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url('images/hero-bg.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -321,7 +321,7 @@ footer .links a img {
 /*coming soon section*/
 
 .coming-soon {
-    background-image: url('../images/boston-night.jpg');
+    background-image: url('images/boston-night.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
