--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ footer .links a {
 }
 
 footer .links a img {
-    width: 5%; /* Adjust width as needed */
+    width: 20px; /* Adjust width as needed */
     vertical-align: middle;
 }
 
