--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ nav .dropdown {
 @media (max-width: 768px) {
     .hero {
         background-attachment: scroll;
+        height: 50vh;
     }
 }
 
@@ -488,6 +489,6 @@ footer .links a img {
 }
 @media (max-width: 768px) {
     .coming-soon{
-    background-attachment: scroll;
+        height: 60vh;
     }
 }
