--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 /* General Styles */
 body {
-    font-family: 'Georgia', serif;
     background-color: #faf0e6;
     color: #333;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     width: 100%;
+}
+
+button{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h1,h2, h3, h4, h5, h6{
+    font-family: "Baskervville SC", serif;
+    font-weight: 300;
+}
+
+p, a{
+    font-family: "Times New Roman", serif;
+    font-weight: normal;
 }
 
 .section {
@@ -194,7 +207,7 @@ nav .dropdown {
 }
 
 .hero .btn {
-    background-color: #c7884a;
+    background-color: #10487c;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -204,11 +217,11 @@ nav .dropdown {
 }
 
 .hero .btn:hover {
-    background-color: #8b5a2b;
+    background-color: #2c70af;
 }
 
 .btn {
-    background-color: #e67e22;
+    background-color: #10487c;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -228,6 +241,7 @@ nav .dropdown {
     padding: 50px 0;
     box-sizing: border-box; /* Ensure padding is included in the width */
     color: #052E54;
+    text-align: justify;
 }
 
 .about .container {
@@ -303,6 +317,7 @@ nav .dropdown {
     text-align: center;
     margin: 0;
     color: #052E54;
+    font-style: italic;
 }
 
 /* Media query for small screens */
@@ -441,7 +456,7 @@ footer .links a img {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.8);
     z-index: 1;
 }
 
@@ -465,7 +480,7 @@ footer .links a img {
 }
 
 .coming-soon .btn {
-    background-color: #c7884a;
+    background-color: #10487c;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -475,7 +490,7 @@ footer .links a img {
 }
 
 .coming-soon .btn:hover {
-    background-color: #8b5a2b;
+    background-color: #2c70af;
 }
 
 .coming-soon .input {
