--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Prata&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
 
 body {
-    background-color: #faf0e6;
-    color: #333;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -24,31 +22,28 @@ p, a{
     font-weight: normal;
 }
 
-.section {
-    width: 80%;
-    box-sizing: border-box; /* Ensure padding is included in the width */
-}
-
-.container {
-    width: 80%;
+.container{
     margin: auto;
-    padding: 0 10px; /* Add padding to avoid overflow issues */
-    box-sizing: border-box;
 }
 
 /* Header */
 header {
     background-color: #052E54;
     padding: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
 }
 
 header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1200px;
+
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
 }
 
 .logo {
@@ -239,12 +234,16 @@ nav .dropdown {
 
 /* About Section */
 .about {
-    width: 80%;
+    width: 100%;
     padding: 50px 0;
     box-sizing: border-box; /* Ensure padding is included in the width */
     color: #052E54;
-    text-align: justify;
-    background-color: #faf0e6;
+    background-image: url('images/background.png');
+    background-size: cover;
+}
+
+.about .wrapped{
+    width: 80%;
     display: flex;
     margin: auto;
     align-items: center;
@@ -257,8 +256,9 @@ nav .dropdown {
 
 .about .container {
     border: 3px solid #052E54;
+    background-color: white;
     padding: 20px;
-    width: 90%;
+    width: 100%;
     border-radius: 10px;
     max-width: 600px;
 }
@@ -269,12 +269,14 @@ nav .dropdown {
 
 .about p {
     font-size: 18px;
+    color: #727272;
 }
 
 @media (max-width: 768px) {
-    .about {
+    .about .wrapped{
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 
     .about img {
@@ -299,10 +301,18 @@ nav .dropdown {
     box-sizing: border-box; /* Ensure padding is included in the width */
     background-color: #052E54;
     color: white;
+    
+}
+
+.services .wrapped{
+    width: 80%;
+    display: flex;
+    margin: auto;
+    align-items: center;
 }
 
 .services .container{
-    width: 90%;
+    width: 50%;
     border-radius: 10px;
 }
 
@@ -322,59 +332,56 @@ nav .dropdown {
     border-bottom: 1px solid white;
 }
 
-/* Quote Section */
-.quote {
-    position: relative;
-    width: 100%;
-    padding: 50px 0;
-    box-sizing: border-box; /* Ensure padding is included in the width */
-    background-color: #faf0e6;
-}
-
-.quote .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px;
-}
-
-.quote .container img {
-    flex: 1;
-    max-width: 400px;
-    height: auto;
-    border: 2px double #052E54;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.quote h2 {
-    flex: 0 0 30%;
-    font-size: 24px;
-    text-align: center;
-    margin: 0;
-    color: #052E54;
-    font-style: italic;
-}
-
-/* Media query for small screens */
-@media (max-width: 768px) {
-    .quote .container {
+@media (max-width: 900px) {
+    .services .wrapped {
         flex-direction: column;
         align-items: center;
     }
 
-    .quote .container img {
-        width: 100%;
-        height: auto;
-        margin-bottom: 20px;
-        order: 1;
-    }
-
-    .quote h2 {
-        flex: 1;
+    .services img {
         width: 100%;
         order: 2;
     }
+
+    .services .container {
+        width: 100%;
+        order: 1;
+    }
+}
+
+/* Quote Section */
+.quote {
+    background-image: url('images/background2.png');
+    background-size: cover;
+    width: 100%;
+    padding: 50px 0;
+    box-sizing: border-box; /* Ensure padding is included in the width */
+}
+
+
+.quote .container{
+    background-image: url('images/murray-rothbard.jpg');
+    background-position: center;
+    border: 1px solid #052E54;
+    border-radius: 8px;
+    font-size: 24px;
+    text-align: center;
+    margin: auto;
+    width: 80%;
+    height: 400px;
+    max-width: 600px;
+    display: flex; /* Enable Flexbox */
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+
+}
+
+.quote h2 {
+    margin: auto;
+    width: 80%;
+    font-size: 24px;
+    color: white;
+    font-style: italic;
 }
 
 /* Footer */
@@ -476,13 +483,13 @@ footer .links a img {
     width: 100%;
     padding: 50px 0;
     box-sizing: border-box; /* Ensure padding is included in the width */
-    background-image: url('images/boston-night.jpg');
-    background-size: cover;
-    background-position: center;
+    background-image: url('images/background3.png');
+    background-size:cover;
     display: flex;
+    align-items: center;
     justify-content: center;
     color: white;
-    height: 90vh;
+    height: 80vh;
     position: relative;
 }
 
@@ -492,11 +499,13 @@ footer .links a img {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
 
 .coming-soon .content {
+    border-radius: 20px;
+    width: 60%;
     position: relative;
     z-index: 2;
     padding: 20px;
@@ -505,6 +514,9 @@ footer .links a img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #093d6e;
+    color: white;
+    max-width: 600px;
 }
 
 .coming-soon .content h1 {
@@ -513,10 +525,12 @@ footer .links a img {
 
 .coming-soon .content p {
     font-size: 24px;
+    width: 70%;
+    color: #ccc
 }
 
 .coming-soon .btn {
-    background-color: #10487c;
+    background-color: #052E54;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -530,6 +544,7 @@ footer .links a img {
 }
 
 .coming-soon .input {
+    border:2px solid #052E54;
     color: #052E54;
     padding: 10px 20px;
     border: none;
@@ -539,8 +554,8 @@ footer .links a img {
     margin-right: -4
 }
 @media (max-width: 768px) {
-    .coming-soon{
-        height: auto;
+    .coming-soon .content{
+        width: 80%;
     }
 }
 
