--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ nav .dropdown {
     display: flex;
     margin: auto;
     align-items: center;
+    gap: 30px;
 }
 
 .about .keys {
@@ -287,7 +288,7 @@ nav .dropdown {
         margin: auto; /* Center it horizontally */
     }
 
-    .about img {
+    .about .keys {
         width: 100%;
         height: auto;
         margin-bottom: 20px;
